[tool.poetry]
name = "chain"
version = "0.1.0"
description = ""
authors = ["missduonggoogle <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
jishaku = "^2.3.2"
pymongo = "^4.0.1"
discord = "^1.7.3"
Flask = "^2.0.2"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
